@@ -1,1 +1,17 @@
+# Hotel Management System
+
+## Description
 The provided Java code implements a basic Hotel Management System using JavaFX for the graphical user interface (GUI). The application allows users to book rooms, order food, and check out, all while managing room availability and services efficiently.
+
+## Technologies Used
+- Java
+- JavaFX
+
+## Installation and Setup
+1. Make sure you have javafx-sdk installed
+2. Go to project directory and then on cmd type:
+javac -d bin -cp "JavaFX-sdk-address" hotelmanagement\*.java
+
+Then enter:
+
+java --module-path lib\javafx-sdk-23.0.1\lib --add-modules javafx.controls -cp bin hotelmanagement.HotelManagementSystem
